--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0,user-scalable=no,viewport-fit=cover">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title></title>
+    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=76b623aa8b175d136df5deaf33a2a1df"></script> 
 </head>
 
 <body>
